--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="overview">Overview</string>
     <string name="title_favorite">Favorite</string>
     <string name="goto_favorite_feature">Goto Favorite Feature</string>
+    <string name="you_can_see_favorite_feature_if_you_click_below">You can see favorite feature if you click below</string>
+    <string name="click_to_favorite">Click To Favorite</string>
 </resources>
